tests/functional/lang/eval-fail-split-2.err.exp
error:
       … while calling the 'split' builtin
         at /pwd/lang/eval-fail-split-2.nix:1:1:
            1| builtins.split "foo" { }
             | ^
            2|

       … while evaluating the second argument passed to builtins.split

       error: expected a string but found a set: { }
